src/objects/MetroclientContactProductGeography__c.object
<CustomObject>
    <description>Metrostudy  Provisioning - Metrostudy User (Contact) Level</description>
    <fields>
        <fullName>ContactAccountName__c</fullName>
        <description>Name of the account and site the contact belongs to.</description>
        <formula>Contact__r.Account.Name + &quot; (&quot; + Contact__r.Account.Site__c + &quot;)&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Contact&apos;s account and site</inlineHelpText>
        <label>Contact Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Metrostudy_User__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetroclientAccountProductGeography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account Product Geography</label>
        <referenceTo>MetroclientAccountProductGeography__c</referenceTo>
        <relationshipName>AccountProductGeographies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetroclientProductGeographyType__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Geography Type</label>
        <referenceTo>MetroclientProductGeographyType__c</referenceTo>
        <relationshipName>MetroclientProductGeographyTypes</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MetroclientProductGeography__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Product Geography</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MetroclientProductGeography__c.ProductGeographyType__c</field>
                <operation>equals</operation>
                <valueField>$Source.MetroclientProductGeographyType__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MetroclientProductGeography__c</referenceTo>
        <relationshipName>MetroclientProductGeographies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Metroclient_uprod_id_TEMP_DNU__c</fullName>
        <description>Temp field for User Migration</description>
        <inlineHelpText>Temp field for User Migration</inlineHelpText>
        <label>Metroclient uprod_id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prod_HIP_Key_TEMP_dnu__c</fullName>
        <description>For user provisioning migration.  Field will be deleted.</description>
        <inlineHelpText>For user provisioning migration.  Field will be deleted.</inlineHelpText>
        <label>Prod HIP Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGeographyAccount__c</fullName>
        <description>The account the product geography belongs to</description>
        <formula>MetroclientAccountProductGeography__r.Account__r.Name + &quot; (&quot; + MetroclientAccountProductGeography__r.Account__r.Site__c + &quot;)&quot;</formula>
        <inlineHelpText>The account that owns the product geography.  (formula field)</inlineHelpText>
        <label>Product Geography Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>MetroclientAccountProductGeography__r.Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Metrostudy Contact Product Geography</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MetroclientAccountProductGeography__c</columns>
        <columns>Contact__c</columns>
        <columns>MetroclientProductGeography__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ProductGeographyAccount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contact Product Geography Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrostudy Contact Product Geographies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>